@@ -1,3 +1,6 @@
+2009-05-17  Ozan Çağlayan <ozan@pardus.org.tr>
+	* bin/mudur.py: Use touch from pardus.shellutils.
+
 2009-05-17  Fatih Aşıcı <fatih@pardus.org.tr>
 	* bin/mudur.py: Get back the kernel version parsing. It is used by
 	autoloadModules().
